[package]
name = "wasm-wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.56"
web-sys = "0.3.56"
rust-embed="6.3.0"
reqwest={version = "0.11.9", features = ["blocking"]}
wasm-bindgen-futures = "0.4.29"
console_error_panic_hook = "0.1.6"
lazy_static = "1.4.0"